Small fixes for UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,6 +143,13 @@
     //
     let menuIds = [];
 
+    //
+    const annotationText0 = 'Annotation Text 0';
+    const annotationText1 = 'Annotation Text 1';
+    const annotationText2 = 'Annotation Text 2';
+    const annotationColor = 'rgba(3,149,153,0.99)';
+    const annotationBorderColor = 'rgba(55,153,158,0.99)';
+
     window.addEventListener('load', (event) => {
         // document.getElementById('save_changes').disabled = true;
         fetch(`${SERVER_URL}/image_list`).then((response) => response.json()).then((data) => {
@@ -203,7 +210,7 @@
                 if (fetchedData.annotations.length > 0) {
                     for (const annotation of fetchedData.annotations) {
                         let annotationElement = document.getElementById(annotation.annotation_id);
-                        annotationElement.textContent = 'Annotation text';
+                        annotationElement.textContent = annotation.annotation_text;
                         annotationElement.style.fontSize = '10px';
                         annotationElement.style.color = 'rgba(3,149,153,0.99)';
                         annotationElement.style.borderStyle = 'double';
@@ -446,6 +453,18 @@
     let menuBlock = document.getElementById('menu_list');
 
     const pointAnnotationsToArray = (event, x, y, dx, dy, w, h) => {
+        let annotationText = 'Annotation Text';
+        if (event.target.id === 'annotation0') {
+            annotationText = annotationText0;
+        }
+
+        if (event.target.id === 'annotation1') {
+            annotationText = annotationText1;
+        }
+
+        if (event.target.id === 'annotation2') {
+            annotationText = annotationText2;
+        }
         const annotationObject = {
             annotation_id: event.target.id,
             styles: `translate(' + ${x} + 'px,' + ${y} + 'px)`,
@@ -454,7 +473,8 @@
             dx: dx,
             dy: dy,
             width: w,
-            height: h
+            height: h,
+            annotation_text: annotationText,
         };
         if (annotationsArray.filter(a => a.annotation_id === event.target.id).length === 0) {
             annotationsArray.push(annotationObject);
@@ -497,7 +517,19 @@
             // call this function on every dragend event
             end(event) {
                 let annotationElement = document.getElementById(event.target.id);
-                annotationElement.textContent = 'Annotation text';
+                if (event.target.id === 'annotation0') {
+                    annotationElement.textContent = 'Annotation text';
+                }
+
+                if (event.target.id === 'annotation1') {
+                    annotationElement.textContent = 'Annotation text 1';
+                }
+
+                if (event.target.id === 'annotation2') {
+                    annotationElement.textContent = 'Annotation text 2';
+                }
+
+                // Annotation styles
                 annotationElement.style.fontSize = '10px';
                 annotationElement.style.color = 'rgba(3,149,153,0.99)';
                 annotationElement.style.borderStyle = 'double';
@@ -572,6 +604,13 @@
                     .then((data) => {
                         if (data.success) {
                             document.getElementById('success_modal').style.display = 'block';
+                            const menuItem = document.getElementById(selectedFileName);
+                            // menuItem.removeChild(menuItem.childNodes[1]);
+                            const spanEl = document.createElement('span');
+                            spanEl.className = 'w3-right';
+                            const dotText = document.createTextNode('•');
+                            spanEl.appendChild(dotText);
+                            menuItem.appendChild(spanEl);
                         }
                     })
                     .catch((error) => {
@@ -592,6 +631,13 @@
                     .then((data) => {
                         if (data.success) {
                             document.getElementById('success_modal').style.display = 'block';
+                            const menuItem = document.getElementById(selectedFileName);
+                            // menuItem.removeChild(menuItem.childNodes[2]);
+                            const spanEl = document.createElement('span');
+                            spanEl.className = 'w3-right';
+                            const dotText = document.createTextNode('•');
+                            spanEl.appendChild(dotText);
+                            menuItem.appendChild(spanEl);
                         }
                     })
                     .catch((error) => {
